2019-03-06  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	Fix a bug in multibytelen().

2019-02-17  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 0.52  Beta version.
	* main.c, COPYRIGHT: Update copyright year.
	* fread.c: Fix typo. It seems a bug.
	* {convert,fread,fwrite,kp,sort,styfile}.c, {hanzi,mendex}.h:
	Avoid compiler warnings.
	Thanks to @ngothan for a report by covscan.
	https://github.com/TeX-Live/texlive-source/issues/11

2017-04-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* main.c: Avoid access violation.
	Thanks to I. Wada san.
	* main.c, COPYRIGHT: Update copyright year.

2016-12-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* sort.c: Add Cyrillic Extended-C

2016-11-12  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* main.c: Avoid access violation.

2016-06-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 0.51  Beta version.
	* fwrite.c: Fix bug of option "hanzi_head" in style file.
	Thanks to Dr. Werner Fink.

2016-02-12  Karl Berry  <karl@tug.org>

	* configure.ac (KPSE_CXX_HACK): add to avoid usual libstdc++.so
	dynamic linking failure.

2016-02-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* convert.c, fread.c, main.c: Remove unused local variables.
	* qsort.c: Avoid compiler warning in the case of Windows 64bit.

2016-01-31  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 0.50  Beta version.
	Support option "icu_rules" in style file.
	Support option "icu_attributes" in style file.
	Support option "priority" in style file
	as similar to mendex.
	Refine and fix several bugs in sorting procedure.
	Fix bug of -g option.
	Update samples.

2015-10-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 0.06  Alpha version.
	Support dotted/dotless I/i in Turkish.
	Support digraphs in Albanian.
	Modify on surrogate pair.
	Update samples.

2015-09-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 0.05  Alpha version.
	Support Hanzi ideograph (Han script) indexing.
	It works when icu_locale is
	"zh@collation=unihan", "ja@collation=unihan",