@@ -1,3 +1,8 @@
+2019-03-16  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* upmendex.ja.txt: Rename from upmendex.doc,
+	  minor update.
+
 2019-03-06  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	Fix a bug in multibytelen().
